Wed Sep 12 18:02:38 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-borland.h:
          CodeGear RAD Studio 2007 doesn't seem to support inlined assembly

        * ace/config-g++-common.h:
        * ace/config-icc-common.h:
          When we have pentium, AMD64, or EM64T as CPU define
          ACE_HAS_INTEL_ASSEMBLY

        * ace/Atomic_Op.h:
          Simplified this file by using ACE_HAS_INTEL_ASSEMBLY

        * ace/CDR_Base.{cpp.inl}:
          Make use of ACE_HAS_INTEL_ASSEMBLY, this fixes bugzilla
          issue 3072

        * ace/WFMO_Reactor.h:
          Doxygen fixes

Wed Sep 12 04:16:12 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * ACE-INSTALL.html:

          Added notes on Microsoft Visual C++ 2005 Express Edition.

Tue Sep 11 15:50:35 UTC 2007  Nishanth Shankaran  <nshankar@nospam.com>

        * ace/Sample_History.cpp: Fixed formatting errors in the
          dump_samples method.

Tue Sep 11 11:38:38 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Updated supported platforms

Mon Sep 10 13:22:38 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * apps/JAWS/stress_testing/util.cpp:
        * apps/drwho/Multicast_Manager.cpp:
        * apps/drwho/Options.cpp:
        * bin/LabVIEW_RT/labview_test_controller/labview_test_controller.cpp:
        * bin/LabVIEW_RT/labview_test_controller/test.cpp:

          Fixed ACE_OS fuzz warnings. Use ACE_OS calls instead of raw OS functions
          where possible. If fuzz detected a false-positive, then disable
          the ACE_OS fuzz check for that section of the code.

Mon Sep 10 12:17:24 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/MT_Reference_Counted_Event_Handler_Test.cpp:
          Add timeouts to recv_n and send_n calls to ensure the calling
          loops always exit.

          This is necessary due to certain races that can occur between