@@ -1,3 +1,8 @@
+Thu Sep 13 08:55:38 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/config-sunos5.5.h:
+          Don't use ACE_HAS_INTEL_ASSEMBLY with GCC
+
 Wed Sep 12 18:02:38 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/config-win32-borland.h:
